# emscripten-wasm-starter

./: .gitignore  CMakeLists.txt  README.md
src/: renderer.cpp  renderer.hpp
